[package]
name = "trustmebro"
version = "1.0.0"
rust-version = "1.74.1"
edition = "2021"
description = "A Rust macro that magically turns unsafe code into ‘totally safe, bro’ with no consequences. Ideal for those who want to assert dominance over the compiler and live on the edge of catastrophe."
license = "Trust Me Bro License (TMBL)"
documentation = "https://docs.rs/trustmebro"
repository = "https://github.com/alexcu2718/trustmebro"
keywords = ["unsafe", "macros", "trust", "chaos", "bravery", "compiler dominance"]
categories = ["macros", "unsafe", "you-should-not-use-this-unless..."]



[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0", features = ["full"] }
[lib]
proc-macro = true
